second add, added lists and basic text

--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
 </head>
 
 <body>
+  <div class = "list">
+    <ul>
+      <li><h4>This is the heading</h4></li>
+      <li> Richmond </li>
+      <li> Farmville </li>
+      <li> Harrisonburg </li>
+      <li> Henrico </li>
+      <li> Fort Collins </li>
+      <li> Rock Camp </li>
+    </ul>
+  </div>
+
+  <div class = "favoritecities">
+    <ol>
+      <li><h4>My top three favorite areas</h4>
+        <li> Richmond</li>
+        <li> Fort Collins</li>
+        <li> Rock Camp</li>
+    </ol>
+  </div>
 
 
 
