--- a/index.html
+++ b/index.html
@@ -14,23 +14,34 @@
 <body>
   <div class = "list">
     <ul>
-      <li><h4>This is the heading</h4></li>
-      <li> Richmond </li>
-      <li> Farmville </li>
-      <li> Harrisonburg </li>
-      <li> Henrico </li>
-      <li> Fort Collins </li>
-      <li> Rock Camp </li>
+      <li><h4><span>&#161;<span>This is the heading<span>&#161;<span></h4></li>
+              <p> These are my top three places I have lived </p>
+            <li> Richmond<span>&#162;<span> </li>
+            <li> Farmville<span>&#163;<span> </li>
+            <li> Harrisonburg<span>&#164;<span> </li>
+            <li> Henrico<span>&#165;<span> </li>
+            <li> Fort Collins<span>&#166;<span> </li>
+            <li> Rock Camp<span>&#167;<span> </li>
     </ul>
   </div>
 
   <div class = "favoritecities">
     <ol>
-      <li><h4>My top three favorite areas</h4>
-        <li> Richmond</li>
-        <li> Fort Collins</li>
-        <li> Rock Camp</li>
+      <li><h4>My top three favorite areas</h4></li>
+            <p> These are my top three places I have lived<span>&#174;</span> </p>
+          <li><strong> Richmond<span>&#175;<span></strong></li>
+          <li> <em>Fort Collins<span>&#176;<span></em></li>
+          <li> <strong>Rock Camp<span>&#177;<span></strong></li>
     </ol>
+  </div>
+
+  <div class = "image">
+<img src = "https://students.galvanize.com/assets/galvanize-logo-ac9865cc4217b77aebbce9e63670dd96.svg" alt = "Galvanize" height = 100px width = 300px>
+  </div>
+
+  <div class = "video">
+      <video src = "https://upload.wikimedia.org/wikipedia/en/2/28/Illusion_movie.ogg" autoplay controls></video>
+      <audio src ="https://upload.wikimedia.org/wikipedia/en/0/04/Rayman_2_music_sample.ogg" autoplay loop></audio>
   </div>
 
 
