Working on table exercise and added initial table with head

--- a/favorites.html
+++ b/favorites.html
@@ -10,6 +10,25 @@
 </head>
 
 <body>
+<table>
+  <thead>
+    <tr>
+      <td>
+        First Name
+      </td>
+      <td>
+        Last Name
+      </td>
+      <td>
+        Favorite Animal
+      </td>
+    </tr>
+
+  </thead>
+
+   <tbody>
+
+   </tbody>
 
 
 
