Added body to table

--- a/favorites.html
+++ b/favorites.html
@@ -27,6 +27,18 @@
   </thead>
 
    <tbody>
+     <tr>
+       <td>
+         James
+       </td>
+       <td>
+         Shields
+       </td>
+       <td>
+         Dog
+       </td>
+     </tr>
+
 
    </tbody>
 
