Added David's information to the table

--- a/favorites.html
+++ b/favorites.html
@@ -38,6 +38,17 @@
          Dog
        </td>
      </tr>
+     <tr>
+       <td>
+         David
+       </td>
+       <td>
+         Bayless
+       </td>
+       <td>
+         Platypus
+       </td>
+     </tr>
 
 
    </tbody>
