added my name and animal

--- a/favorites.html
+++ b/favorites.html
@@ -38,6 +38,17 @@
          Dog
        </td>
      </tr>
+     <tr>
+       <td>
+         Michelle
+       </td>
+       <td>
+         DellOrto
+       </td>
+       <td>
+         Platypus
+       </td>
+     </tr>
 
 
    </tbody>
